--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,28 @@
  *= require css/width-full
  *= require cms
  */
+
+
+#footer-widgets ul.list-unstyled li.pull-left:first-of-type {
+  margin-left: 20px;
+}
+#footer-widgets ul.list-unstyled li.pull-left:after {
+  content: '|';
+  margin: 0 10px
+}
+
+#footer-widgets ul.list-unstyled {
+  padding-top: 30px
+}
+
+#header_link_1, #header_link_2 {
+  margin: 2px -7px 10px -7px;
+  padding: 5px 5px 5px 15px;
+}
+
+#header_link_1 a, #header_link_2 a{
+  font-size: 0.7em;
+  text-align: left;
+  font-weight: normal;
+  color:#fff;
+}
