--- a/app/views/applicants/registrations/new.html.erb
+++ b/app/views/applicants/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="panel panel-primary">
     <div class="panel-heading">Sign up</div>
     <div class="panel-body">
-      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form' } ) do |f| %>
+      <%= form_for(resource, :as => resource_name, :url => applicant_registration_path, :html => { :role => 'form' } ) do |f| %>
 
         <p>Please fill out the form below to begin the application process.</p>
         <hr />
