--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -7,65 +7,73 @@
           %i.fa.fa-bars
 
       = link_to "#{Setting[:university]&.titleize}".html_safe, root_path, class: 'navbar-brand', id: 'ar-brand'
-
-    %div{ :class => "collapse navbar-collapse", :id => "bs-example-navbar-collapse-1" }
-      %ul.nav.navbar-nav.navbar-right
-        - if params[:controller] == 'welcome'
-          %li.active
-            =link_to "Welcome", root_path, :class => 'active'
-        - else
-          %li
-            =link_to "Welcome", root_path
-        - if !request.original_url.match('/info')
-          %li
-            = link_to 'Current Projects', "http://ecm.ucsd.edu/REU.html"
-          %li{class: params[:controller] == 'applicants/registrations' && params[:action] !=  'status' ? 'active' : ''}
-            - if applicant_signed_in?
-              =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
-
-            - elsif started? && !expired?
-              =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
-              =content_tag :li, link_to('Admin', rails_admin_path) if !current_user
-
-          - if started? && !expired?
-            - if params[:controller] == 'applicants/academic_records'
+    - if settings_filled_in?
+      %div{ :class => "collapse navbar-collapse", :id => "bs-example-navbar-collapse-1" }
+        %ul.nav.navbar-nav.navbar-right
+          - if params[:controller] == 'welcome'
+            %li.active
+              =link_to "Welcome", root_path, :class => 'active'
+          - else
+            %li
+              =link_to "Welcome", root_path
+          - if !request.original_url.match('/info')
+            %li
+              = link_to 'Current Projects', "http://ecm.ucsd.edu/REU.html"
+            %li{class: params[:controller] == 'applicants/registrations' && params[:action] !=  'status' ? 'active' : ''}
+              - if applicant_signed_in?
+                =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
+  
+              - elsif started? && !expired?
+                =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
+ 
+            - if started? && !expired?
+              - if params[:controller] == 'applicants/academic_records'
+                %li.active
+                  - if applicant_signed_in?
+                    =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
+              - else
+                %li
+                  - if applicant_signed_in?
+                    =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
+  
+  
+            - if params[:controller] == 'applicants/recommenders'
               %li.active
                 - if applicant_signed_in?
-                  =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
+                  =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
             - else
               %li
                 - if applicant_signed_in?
-                  =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
-
-
-          - if params[:controller] == 'applicants/recommenders'
-            %li.active
-              - if applicant_signed_in?
-                =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
-          - else
+                  =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
+  
+            - if params[:controller] == 'applicants/registrations' && params[:action] ==  'status'
+              %li.active
+                - if applicant_signed_in?
+                  =link_to "Status", applicant_status_url, :class => 'active'
+            - else
+              %li
+                - if applicant_signed_in?
+                  =link_to "Status", applicant_status_url, :class => 'active'
+  
+            - if params[:controller] == 'applicants/sessions'
+              %li.active
+                - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
+                  = user_signed_in? ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
+                - else
+                  = link_to "Login", main_app.new_applicant_session_url, :class => 'active'
+            - else
+              %li
+                - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
+                  = user_signed_in? ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
+                - else
+                  = link_to "Login", main_app.new_applicant_session_url, :class => 'active'
+            =content_tag :li, link_to('Admin', rails_admin_path)
+ 
+    - else
+      %div{ :class => "collapse navbar-collapse", :id => "bs-example-navbar-collapse-1" }
+        %ul.nav.navbar-nav.navbar-right
+          %li
+            = link_to 'Settings', settings_path
+          - if current_user.blank?
             %li
-              - if applicant_signed_in?
-                =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
-
-          - if params[:controller] == 'applicants/registrations' && params[:action] ==  'status'
-            %li.active
-              - if applicant_signed_in?
-                =link_to "Status", applicant_status_url, :class => 'active'
-          - else
-            %li
-              - if applicant_signed_in?
-                =link_to "Status", applicant_status_url, :class => 'active'
-
-          - if params[:controller] == 'applicants/sessions'
-            %li.active
-              - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
-                = user_signed_in? ? link_to("Logout1", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
-              - else
-                = link_to "Login", main_app.new_applicant_session_url, :class => 'active'
-          - else
-            %li
-              - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
-                = user_signed_in? ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
-              - else
-                = link_to "Login", main_app.new_applicant_session_url, :class => 'active'
-          =content_tag :li, link_to('Admin', rails_admin_path) if current_user
+              = link_to 'Login', new_user_session_path
