--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,20 @@
 
   <body id="<%= canonical_id @page %>">
     <%= site_bar -%>
-
+    <div id='flash'>
+      <%= content_tag 'div', (flash[:alert]), :class => 'alert alert-warning', :id => 'alert', :onclick => "$(this).slideUp();" if flash[:alert] %>
+      <%= content_tag 'div', (flash[:error]), :class => 'alert alert-danger', :id => 'error', :onclick => "$(this).slideUp();" if flash[:error] %>
+      <%= content_tag 'div', (flash[:notice]), :class => 'alert alert-info', :id => 'notice', :onclick => "$(this).slideUp();" if flash[:notice] %>
+      <%= content_tag 'div', (flash[:success]), :class => 'alert alert-success', :id => 'success', :onclick => "$(this).slideUp();" if flash[:success] %>
+    </div>
     <div id="sb-site">
       <div class="boxed">
         <header id="header">
-          <%= render "/refinery/header" -%>
+          <% if is_subdomain? %>
+            <%= render 'layouts/header' %>
+          <% else %>
+            <%= render "/refinery/header" -%>
+          <% end %>
         </header>
 
         <section id="page">
@@ -26,11 +35,21 @@
               </div>
             </div>
           </div>
-          <%= yield %>
+          <% if is_subdomain? %>
+            <div class='container content' %>
+              <%= yield %>
+            </div>
+          <% else %>
+            <%= yield %>
+          <% end %>
         </section>
 
         <footer>
-          <%= render "/refinery/footer" -%>
+          <% if is_subdomain? %>
+            <%= render "/layouts/footer_text" -%>
+          <% else %>
+            <%= render "/refinery/footer" -%>
+          <% end %>
         </footer>
 
       </div> <!-- boxed -->
