--- a/app/views/users/_links.html.erb
+++ b/app/views/users/_links.html.erb
@@ -1,22 +1,22 @@
 <small>
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Sign in", new_applicant_session_path %> |
+  <%= link_to "Sign in", new_user_session_path %> |
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  &nbsp;<%= link_to "Sign up", new_applicant_registration_path %> |
+  &nbsp;<%= link_to "Sign up", new_user_registration_path %> |
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  &nbsp;<%= link_to "Forgot your password?", new_applicant_password_path %>
+  &nbsp;<%= link_to "Forgot your password?", new_user_password_path %>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  &nbsp;| <%= link_to "Didn't receive confirmation?", new_applicant_confirmation_path %>&nbsp;|
+  &nbsp;| <%= link_to "Didn't receive confirmation?", new_user_confirmation_path %>&nbsp;|
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_applicant_unlock_path %>
+  <%= link_to "Didn't receive unlock instructions?", new_user_unlock_path %>
 <% end -%>
 
 </small>
