--- a/app/views/admin_accounts/new.html.erb
+++ b/app/views/admin_accounts/new.html.erb
@@ -2,7 +2,7 @@
   <div class="panel panel-primary">
     <div class="panel-heading">Step 4: Add Admin Accounts (optional)</div>
     <div class="panel-body">
-      <%= render 'form', admin_account: @admin_account %>
+      <%= render 'form', grant: @grant %>
       <%= link_to 'Back', admin_accounts_path %>
     </div>
   </div>
