--- a/app/views/grants/_form.html.erb
+++ b/app/views/grants/_form.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= form_for(:grant, url: account_admin_path(@grant), html: {id: 'payment-form'}) do |f| %>
+<%= form_for(:grant, url: new_admin_account_path(@grant), html: {id: 'payment-form'}) do |f| %>
   <% if @grant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@grant.errors.count, "error") %> prohibited this grant from being saved:</h2>
