--- a/app/views/grants/_form.html.erb
+++ b/app/views/grants/_form.html.erb
@@ -1,6 +1,4 @@
-
-
-<%= form_for(:grant, url: new_admin_account_path(@grant), html: {id: 'payment-form'}) do |f| %>
+<%= form_for(:grant, url: {action: "create"}, html: {id: 'payment-form'}) do |f| %>
   <% if @grant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@grant.errors.count, "error") %> prohibited this grant from being saved:</h2>
@@ -21,8 +19,15 @@
     <%= f.label :subdomain %><br>
     <%= f.text_field :subdomain, :style => 'width: 100%;', :placeholder => 'This will display as "yoursubdomain.reumanager.com"'%>
   </div>
-
   <%= f.fields_for :users, @grant.users.build do |user_form| %>
+    <div class="field">
+      <%= user_form.label :first_name %><br>
+      <%= user_form.text_field :first_name, :style => 'width: 100%;' %>
+    </div>
+    <div class="field">
+      <%= user_form.label :last_name %><br>
+      <%= user_form.text_field :last_name, :style => 'width: 100%;' %>
+    </div>
     <div class="field">
       <%= user_form.label :email %><br>
       <%= user_form.email_field :email, :style => 'width: 100%;' %>
