update config files and images

--- a/app/views/layouts/_footer_text.html.haml
+++ b/app/views/layouts/_footer_text.html.haml
@@ -76,10 +76,10 @@
 
 
       %div.col-md-11
-        %p
-          If you have any comments, questions, or suggestions, please contact us at
-          %a(href='mailto:dr.stegman@gmail.com')
-            dr.stegman@gmail.com.
+        -# %p
+        -#   If you have any comments, questions, or suggestions, please contact us at
+        -#   %a(href='mailto:dr.stegman@gmail.com')
+        -#     dr.stegman@gmail.com.
         %p
           The REU Manager online application management system is freely available for use by other undergraduate research programs. Development for this project is supported by NSF EEC-1062979.
 
