--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -16,8 +16,8 @@
         - else
           %li
             =link_to "Welcome", root_path
-        %li
-          = link_to 'Current Projects', "https://scripps.ucsd.edu/"
+        -# %li
+        -#   = link_to 'Current Projects', "https://scripps.ucsd.edu/"
         %li{class: params[:controller] == 'applicants/registrations' && params[:action] !=  'status' ? 'active' : ''}
           - if applicant_signed_in?
             =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
