--- a/app/views/applicants/academic_records/edit.html.erb
+++ b/app/views/applicants/academic_records/edit.html.erb
@@ -2,12 +2,10 @@
   <%= form_for(current_applicant, :url => applicants_records_url, :html => { :method => :put, :multipart => true }) do |f| %>
     <div class="panel-heading">Academic Info</div>
     <div class="panel-body">
+      <p>Complete one of these for each college or university you have attended</p>
       <%= errors_for current_applicant %>
 
       <div class="form-group">
-        <%= f.label 'Current Academic Level' %>
-        <%= f.select :academic_level, options_for_select(["Junior", "Senior"], current_applicant.academic_level), {:include_blank => ''}, { :class => "form-control" }%>
-
         <%= f.fields_for :records do |builder| %>
           <%= render 'record_fields', f: builder %>
         <% end %>
@@ -28,19 +26,39 @@
       <div class="add-container"><%= link_to_add_fields "Add award", f, :awards %></div>
     </div>
 
-    <div class="panel-heading">Computer Skills</div>
+    <div class="panel-heading">Research Interest</div>
     <div class="panel-body">
+
+      <%= f.label :research_interest_1, 'First Choice' %>
+      <%= f.select :research_interest_1, options_for_select(Applicant::RESEARCH_INTERESTS, f.object.research_interest_1), { :include_blank => true }, { :class => "form-control" } %>
+      <%= f.label :research_interest_2, 'Second Choice' %>
+      <%= f.select :research_interest_2, options_for_select(Applicant::RESEARCH_INTERESTS, f.object.research_interest_2), { :include_blank => true }, { :class => "form-control" } %>
+      <%= f.label :research_interest_3, 'Third Choice' %>
+      <%= f.select :research_interest_3, options_for_select(Applicant::RESEARCH_INTERESTS, f.object.research_interest_3), { :include_blank => true }, { :class => "form-control" } %>
+      <%= f.label :research_interest_4, 'Fourth Choice' %>
+      <%= f.select :research_interest_4, options_for_select(Applicant::RESEARCH_INTERESTS, f.object.research_interest_4), { :include_blank => true }, { :class => "form-control" } %>
+      <%= f.label :research_interest_5, 'Fifth Choice' %>
+      <%= f.select :research_interest_5, options_for_select(Applicant::RESEARCH_INTERESTS, f.object.research_interest_5), { :include_blank => true }, { :class => "form-control" } %>
+
+    </div>
+
+    <div class="panel-heading">Experience</div>
+    <div class="panel-body">
+      <%= f.label :previous_math_science_experience %>
+      <%= f.text_area :previous_math_science_experience, :class => 'form-control', :rows => 2, :placeholder => "Describe your previous math and science experience."  %>
+
+      <%= f.label :research_experience %>
+      <%= f.text_area :research_experience, :class => 'form-control', :rows => 2, :placeholder => "Please list any research related experience."  %>
+
+      <%= f.label :leadership_experience %>
+      <%= f.text_area :leadership_experience, :class => 'form-control', :rows => 2, :placeholder => "Please list any leadership related experience."  %>
+
+      <%= f.label :programming_experience %>
+      <%= f.text_area :programming_experience, :class => 'form-control', :rows => 2, :placeholder => "Please list any programming related experience."  %>
+
+      <%= f.label :cpu_skills, 'Computer Skills' %>
       <%= f.text_area :cpu_skills, :class => 'form-control', :rows => 2, :placeholder => "Please list any computer related skills (e.g. Application experience, programming ability, etc.)"  %>
-    </div>
 
-    <div class="panel-heading">Laboratory Skills</div>
-    <div class="panel-body">
-      <%= f.text_area :lab_skills, :class => 'form-control', :rows => 2, :placeholder => "Please list any laboratory related skills"  %>
-    </div>
-
-    <div class="panel-heading">Statement of Purpose</div>
-    <div class="panel-body">
-      <%= f.text_area :statement_of_purpose, :class => 'form-control', :rows => 6, :placeholder => "Please give us a statement of purpose for any past (or planned future) contributions to enhancing equity, diversity, and inclusion. This could include involvement in outreach, tutoring, mentoring, advising, or other programs designed to remove barriers facing women, minorities, veterans, people with disabilities or other individuals who are members of groups that been historically under-represented or under-served in higher education." %>
     </div>
 
     <%= render "applicants/shared/nav" %>
