--- a/app/views/applicants/registrations/edit.html.erb
+++ b/app/views/applicants/registrations/edit.html.erb
@@ -11,18 +11,23 @@
 
       <div class="form-group">
 
-        <%= f.label :first_name %> *
+        <%= f.label :first_name, '* First Name' %>
         <%= f.text_field :first_name, :class => "form-control", :placeholder => "George" %>
 
-        <%= f.label :last_name %> *
+        <%= f.label :last_name, '* Last Name' %>
         <%= f.text_field :last_name, :class => "form-control", :placeholer => "Washington" %>
 
-        <%= f.label :email %> *
+        <%= f.label :email, '* Email' %>
         <%= f.email_field :email, :class => "form-control", :placeholder => 'george@whitehouse.gov' %>
 
-        <%= f.label :phone %> *
+        <%= f.label :phone, '* Phone' %>
         <%= f.text_field :phone, :class => "form-control", :placeholder => '555-555-5555' %>
 
+        <%= f.label :cell_phone, '* Cell Phone' %>
+        <%= f.text_field :cell_phone, :class => "form-control", :placeholder => '555-555-5555' %>
+
+        <%= f.label :citizenship, '* Citizenship' %>
+        <%= f.select :citizenship, options_for_select(['United States'] + Carmen::Country.all.map(&:name) + ["Prefer to not respond"], @applicant.citizenship), { :include_blank => true }, { :class => "form-control" } %>
       </div>
 
     </div>
@@ -30,7 +35,7 @@
     <div class="panel-heading">Addresses</div>
     <div class="panel-body">
 
-      <p>Please enter at least one postal address.</p>
+      <p>Please enter at least your permanent address and your school mailing address.</p>
 
       <div class="form-group">
         <%= f.fields_for :addresses do |builder| %>
@@ -51,22 +56,30 @@
 
       <div class="form-group">
 
-        <%= f.label :dob, "Date of Birth (YYYY-MM-DD)" %> *
+        <%= f.label :dob, "* Date of Birth (YYYY-MM-DD)" %>
         <%= f.text_field :dob, 'data-behaviour' => 'datepicker', :class => "form-control" %>
 
-        <%= f.label :gender %> *
+        <%= f.label :gender, '* Gender' %>
         <%= f.select :gender, options_for_select(["Male", "Female", "I do not define my gender this way", "Prefer to not respond"], @applicant.gender), { :include_blank => true }, { :class => "form-control" } %>
 
-        <%= f.label :ethnicity %> *
+        <div class="checkbox">
+          <%= f.check_box :member_of_lgbt_community %>
+          <%= f.label :member_of_lgbt_community, 'Do you consider yourself a member of the LGBT+(lesbian, gay, bisexual, transgender) community?' %>
+        </div>
+
+        <%= f.label :ethnicity, '* Ethnicity' %>
         <%= f.select :ethnicity, options_for_select( ["Hispanic or Latino", "Not Hispanic or Latino", "Prefer to not respond"], @applicant.ethnicity), { :include_blank => true }, { :class => "form-control" } %>
 
-        <%= f.label :race %> *
+        <%= f.label :race, '* Race' %>
         <%= f.select :race, options_for_select(["American Indian or Alaskan Native", "Caucasian", "Asian", "Black or African American", "Native Hawaiian or Pacific Islander", "Prefer to not respond"], @applicant.race), { :include_blank => true }, { :class => "form-control" } %>
 
-        <%= f.label :citizenship %> *
-        <%= f.select :citizenship, options_for_select(['United States'] + Carmen::Country.all.map(&:name) + ["Prefer to not respond"], @applicant.citizenship), { :include_blank => true }, { :class => "form-control" } %>
+        <%= f.label :fathers_highest_education %>
+        <%= f.select :fathers_highest_education, options_for_select(Applicant::EDUCATION_LEVELS, @applicant.fathers_highest_education), { :include_blank => true }, { :class => "form-control" } %>
 
-        <%= f.label :disability %> *
+        <%= f.label :mothers_highest_education %>
+        <%= f.select :mothers_highest_education, options_for_select(Applicant::EDUCATION_LEVELS, @applicant.mothers_highest_education), { :include_blank => true }, { :class => "form-control" } %>
+
+        <%= f.label :disability, '* Disability' %>
         <%- if show_disability_input? -%>
           <div id='disability_container' class='input-append'>
             <%= f.text_field :disability, :class => "form-control" %>
@@ -77,27 +90,29 @@
           <%= f.select :disability, options_for_select(["No", "Yes", "Prefer to not respond"], @applicant.disability), { :include_blank => true }, { :class => "form-control" } %>
         <%- end -%>
 
-        <%= f.label :are_you_a_veteran_of_the_USA_military? %> *
+        <%= f.label :are_you_a_veteran_of_the_USA_military?, '* Are you a verteran of the USA military?' %>
         <%= f.select :military, options_for_select(["No", "Yes", "Prefer to not respond"], @applicant.military), { :include_blank => true }, { :class => "form-control" } %>
+
+        <%= f.label :veteran_information %>
+        <%= f.select :veteran_information, options_for_select(['VET-100', 'VET-100a'], @applicant.military), { :include_blank => true }, { :class => "form-control" } %>
       </div>
     </div>
 
 
-    <div class="panel-heading">Personal Statement</div>
+    <div class="panel-heading">* Personal Statement</div>
     <div class="panel-body">
 
-      <div class="form-group"> *
+      <div class="form-group">
         <%= f.text_area :statement, :class => 'form-control', :rows => 6, :placeholder => "Statement describing your research interests and personal goals for the internship"  %>
       </div>
     </div>
 
     <div class="panel-heading">How did you hear about us?</div>
     <div class="panel-body">
-      <div class="radio"><label for=""><%= f.radio_button(:found_us, 'NSF REU Website') %>NSF REU Website</label></div>
-      <div class="radio"><label for=""><%= f.radio_button(:found_us, 'Professor') %>Professor</label></div>
-      <div class="radio"><label for=""><%= f.radio_button(:found_us, 'Undergraduate Program') %>Undergraduate Program</label></div>
-      <div class="radio"><label for=""><%= f.radio_button(:found_us, 'Email') %>Email</label></div>
-      <div class="radio"><label for=""><%= f.radio_button(:found_us, 'Other') %>Other</label></div>
+      <div class="form-group">
+        <%= f.label :found_us, 'How did you find us?' %>
+        <%= f.text_field :found_us %>
+      </div>
     </div>
 
     <div class="panel-heading">Program Dates</div>
