--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,9 @@
 
 %header.container
   .header-inner.main-header
-    %h1{ :id => "header_link_1" }
-      #{link_to(Setting[:university], Setting[:university_url])}, #{link_to(Setting[:department], Setting[:department_url])}
+    -# %h1{ :id => "header_link_1" }
+    -#   #{link_to(Setting[:university], Setting[:university_url])}
+    -#   - if Setting[:department]
+    -#     | , #{link_to(Setting[:department], Setting[:department_url])}
     %h2{ :id => "header_link_2" }
       = link_to("#{Setting[:app_title]} (#{Setting[:program_start_date].to_date.strftime("%B %d, %Y")} - #{Setting[:program_end_date].to_date.strftime("%B %d, %Y")})", Setting[:program_url])
