--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -22,13 +22,16 @@
             = link_to "Apply Now", new_applicant_registration_path, :class => "btn btn-lg btn-success"
       - else
         %h3.deadline
-          Applications will be available in #{Setting[:application_start].to_date.strftime("%A, %b %d")} for the Summer 2019 Program. Applications will be due on #{Setting[:application_deadline].to_date.strftime("%A, %b %d") if Setting[:application_deadline]} and Decisions sent to applicants by #{Setting[:notification_date].to_date.strftime("%A, %b, %d")}.
-
+          Applications will be available in #{Setting[:application_start].to_date.strftime("%A, %b %d")} for the Summer 2019 Program. Applications will be due at 11:59pm Pacific Time on #{Setting[:application_deadline].to_date.strftime("%A, %b %d") if Setting[:application_deadline]} and Decisions sent to applicants by #{Setting[:notification_date].to_date.strftime("%A, %b %d")}.
+        %br  
+        %p
+          Please Note: We may be able to work with you if your final exams do not end before the program start date.  We are willing to proctor final exams, if your institution is willing to allow such an arrangement.  It would be up to you to arrange this with your institution.
 
 
   .col-md-12
     %section.col-md-4
       %h3 Program Highlights
+      = link_to "Click here to view the full list of mentors and projects for Summer 2019."
       = raw Snippet[:highlights]
 
     %section.col-md-4
