--- a/app/views/applicants/recommenders/edit.html.erb
+++ b/app/views/applicants/recommenders/edit.html.erb
@@ -7,15 +7,16 @@
       <%= errors_for @applicant %>
 
       <p><b>Please submit contact information for 2 letters of recommendation.</b></p>
+      
+      <div class="form-group">
+        <%= f.fields_for :recommenders do |builder| %>
+          <%= render 'recommender_fields', f: builder %>
+        <% end %>
 
-      <%= f.fields_for :recommenders do |builder| %>
-        <%= render 'recommender_fields', f: builder %>
-      <% end %>
-      <div class='add-container'>
-        <b>Please note that only up to TWO letters are of recommendation is read for your application. Do NOT add a third recommender unless one of your first two recommenders did not respond or needs to be modified.</b>
-        <p>
+        <b>Please note that only up to TWO letters of recommendation are read for your application. Do NOT add a third recommender unless one of your first two recommenders did not respond or needs to be modified.</b>
+        <div class='add-container'>
           <%= link_to_add_fields "Add recommender", f, :recommenders %>
-        </p>
+        </div>
       </div>
       <hr />
 
