Make corrections to text

--- a/app/views/applicants/academic_records/edit.html.erb
+++ b/app/views/applicants/academic_records/edit.html.erb
@@ -9,7 +9,7 @@
         <%= f.fields_for :records do |builder| %>
           <%= render 'record_fields', f: builder %>
         <% end %>
-        <div class="add-container"><%= link_to_add_fields "Add institutiond", f, :records %></div>
+        <div class="add-container"><%= link_to_add_fields "Add institution", f, :records %></div>
       </div>
     </div>
 
