--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -10,14 +10,10 @@
         It is wise to apply to many internship programs, not just ours!
       %p 
         %strong
-          Here is a list of REU programs:
-      %p 
-        = link_to "https://www.nsf.gov/crssprgm/reu/reu_search.jsp"
+        = link_to "Here is a list of REU programs", "https://www.nsf.gov/crssprgm/reu/reu_search.jsp"
       %p 
         %strong
-          Here is a list of NASA internship opportunities:
-      %p 
-        = link_to "https://intern.nasa.gov/ossi/web/public/guest/searchOpps"
+        = link_to "Here is a list of NASA internship opportunities", "https://intern.nasa.gov"
     .col-md-12
       - if expired?
         %h3.deadline
@@ -37,15 +33,18 @@
           Applications will be available in #{Setting[:application_start].to_date.strftime("%A, %b %d")} for the Summer 2019 Program. Applications will be due at 11:59pm Pacific Time on #{Setting[:application_deadline].to_date.strftime("%A, %b %d") if Setting[:application_deadline]} and Decisions sent to applicants by #{Setting[:notification_date].to_date.strftime("%A, %b %d")}.
         %br  
         %p
+          <strong> Program Dates: </strong> #{Setting[:program_start_date].to_date.strftime("%B %d, %Y")} - #{Setting[:program_end_date].to_date.strftime("%B %d, %Y")} 
+          <br>
           %strong
             Please Note:
-          We may be able to work with you if your final exams do not end before the program start date.  We are willing to proctor final exams, if your institution is willing to allow such an arrangement.  It would be up to you to arrange this with your institution.
+          We may be able to work with you if your final exams do not end before the program start date.  We require all interns to be present for the entire program, including the first day.  However, we are willing to proctor final exams, if your institution is willing to allow such an arrangement.  It would be up to you to arrange this with your institution.
 
 
   .col-md-12
     %section.col-md-4
       %h3 Program Highlights
-      = link_to "Click here to view the full list of mentors and projects for Summer 2019."
+      = link_to "Click here to view the full list of mentors and projects for Summer 2019.", "https://www.seti.org/seti-institute-reu-mentors-2019"
+      %p
       = raw Snippet[:highlights]
 
     %section.col-md-4
